<?xml version="1.0"?>
<package format="3">
	<!--   <build_depend>message_generation</build_depend> -->
	<!--   <build_depend>roscpp</build_depend> -->
	<!--   <build_export_depend>message_generation</build_export_depend> -->
	<!--   <buildtool_depend>catkin</buildtool_depend> -->
	<!--   <depend>roscpp</depend> -->
	<!--   <doc_depend>doxygen</doc_depend> -->
	<!--   <exec_depend>message_runtime</exec_depend> -->
	<!--   <exec_depend>roscpp</exec_depend> -->
	<!--   <test_depend>gtest</test_depend> -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<!--   Note that this is equivalent to the following: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->
	<!-- <depend>
		radar_ros_time_converter
	</depend> -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<!-- <url type="website">http://wiki.ros.org/radar_locations_decoder_gen5_ros</url> -->
	<!-- Author tags are optional, multiple are allowed, one per tag -->
	<!-- Authors do not have to be maintainers, but could be -->
	<!-- Commonly used license strings: -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Example: -->
	<!-- Example: -->
	<!-- Example:  -->
	<!-- Examples: -->
	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- The *depend tags are used to specify dependencies -->
	<!-- The export tag contains other, unspecified, tags -->
	<!-- Url tags are optional, but multiple are allowed, one per tag -->
	<!-- Use build_depend for packages you need at compile time: -->
	<!-- Use build_export_depend for packages you need in order to build against this package: -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
	<!-- Use doc_depend for packages you need only for building documentation: -->
	<!-- Use exec_depend for packages you need at runtime: -->
	<!-- Use test_depend for packages you need only for testing: -->
	<buildtool_depend>
		ament_cmake
	</buildtool_depend>
	<depend>
		diagnostic_updater
	</depend>
	<depend>
		geometry_msgs
	</depend>
	<depend>
		message_runtime
	</depend>
	<depend>
		radar_gen5_msgs
	</depend>
	<depend>
		radar_locations_decoder_gen5
	</depend>
	<depend>
		radar_msgs
	</depend>
	<depend>
		rclcpp
	</depend>
	<depend>
		std_msgs
	</depend>
	<depend>
		yaml-cpp
	</depend>
	<description>
		The radar_locations_decoder_gen5_ros package
	</description>
	<export>
		<!-- Other tools can request additional information be placed here -->
		<build_type condition="$ROS_VERSION == 1">
			catkin
		</build_type>
		<build_type condition="$ROS_VERSION == 2">
			ament_cmake
		</build_type>
	</export>
	<license>
		Bosch INTERNAL
	</license>
	<maintainer email="achim.feyerabend@de.bosch.com">
		PJ-FA
	</maintainer>
	<maintainer email="sto1ply@todo.todo">
		PJ-FA
	</maintainer>
	<maintainer email="vladimir.belyaev@de.bosch.com">
		PJ-MP
	</maintainer>
	<name>
		radar_locations_decoder_gen5_ros
	</name>
	<version>
		0.0.0
	</version>
</package>
