<?xml version="1.0"?>
<package format="3">
	<!--   <build_depend>message_generation</build_depend> -->
	<!--   <buildtool_depend>catkin</buildtool_depend> -->
	<!--   <run_depend>message_runtime</run_depend> -->
	<!--   <test_depend>gtest</test_depend> -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<!-- <url type="website">http://wiki.ros.org/radar_msgs</url> -->
	<!-- Author tags are optional, mutiple are allowed, one per tag -->
	<!-- Authors do not have to be maintianers, but could be -->
	<!-- Commonly used license strings: -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Example: -->
	<!-- Example: -->
	<!-- Example:  -->
	<!-- Examples: -->
	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- The *_depend tags are used to specify dependencies -->
	<!-- The export tag contains other, unspecified, tags -->
	<!-- Url tags are optional, but mutiple are allowed, one per tag -->
	<!-- Use build_depend for packages you need at compile time: -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!-- Use test_depend for packages you need only for testing: -->
	<build_depend condition="$ROS_VERSION == 1">
		message_generation
	</build_depend>
	<build_depend condition="$ROS_VERSION == 2">
		rosidl_default_generators
	</build_depend>
	<build_depend>
		geometry_msgs
	</build_depend>
	<build_depend>
		std_msgs
	</build_depend>
	<buildtool_depend condition="$ROS_VERSION == 1">
		catkin
	</buildtool_depend>
	<buildtool_depend condition="$ROS_VERSION == 2">
		ament_cmake
	</buildtool_depend>
	<description>
		The radar_msgs package
	</description>
	<exec_depend condition="$ROS_VERSION == 1">
		message_runtime
	</exec_depend>
	<exec_depend condition="$ROS_VERSION == 2">
		rosidl_default_runtime
	</exec_depend>
	<exec_depend>
		geometry_msgs
	</exec_depend>
	<exec_depend>
		std_msgs
	</exec_depend>
	<export>
		<!-- <metapackage/> -->
		<!-- Other tools can request additional information be placed here -->
		<!-- You can specify that this package is a metapackage here: -->
		<build_type condition="$ROS_VERSION == 1">
			catkin
		</build_type>
		<build_type condition="$ROS_VERSION == 2">
			ament_cmake
		</build_type>
	</export>
	<license>
		Bosch INTERNAL
	</license>
	<maintainer email="PJ-FA@todo.todo">
		PJ-FA
	</maintainer>
	<member_of_group condition="$ROS_VERSION == 2">
		rosidl_interface_packages
	</member_of_group>
	<name>
		radar_msgs
	</name>
	<version>
		0.0.0
	</version>
</package>
